Update to functions in smart-escrow

--- a/testcontractor.html
+++ b/testcontractor.html
@@ -2,7 +2,7 @@
 <html>
     <head>  
   <title>Smart Escrow</title>  
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="teststyle.css">
   <script
    src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"
    type="application/javascript"
@@ -43,7 +43,7 @@
 
 
 // Declaring contract blockchain details
-var contractAddress = "0x2BaD1c6Be9fA4e82ED37B341C059951e8C0F161a";
+var contractAddress = "0xf5A6De4388d49C9C7C9dD5Eb4F6333c7e963e9B3";
 var abi = 
 [
 	{
@@ -180,7 +180,6 @@ var abi =
 		"type": "function"
 	}
 ]
-
 var Escrow;
 var signer;
       
